--- a/style.css
+++ b/style.css
@@ -1,3 +1,37 @@
+h1 {
+  text-align: center;
+}
+img{
+  display: block;
+  margin-left:auto;
+  margin-right: auto;
+
+}
+figcaption{
+  text-align: center;
+  font-size: small;
+}
+nav a{
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: center;
+  
+  
+
+}
+#featured-property p{
+  width: 800px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+div {
+  text-align: center;
+  background-color: firebrick;
+  width: 25%;
+  display: inline-block;
+}
+
 body {
   width: 100%;
   height: 100%;
